@@ -104,7 +104,7 @@ OSX_filename_classes[] =
     0x40,0x61,0x62,0x63, 0x64,0x65,0x66,0x67,
     0x68,0x69,0x6a,0x6b, 0x6c,0x6d,0x6e,0x6f,
     0x70,0x71,0x72,0x73, 0x74,0x75,0x76,0x77,
-    0x78,0x79,0x7a,0x5b, 0x2f,0x5d,0x5e,0x5f,
+    0x78,0x79,0x7a,0x5b, 0x5c,0x5d,0x5e,0x5f,
     0x60,0x61,0x62,0x63, 0x64,0x65,0x66,0x67,
     0x68,0x69,0x6a,0x6b, 0x6c,0x6d,0x6e,0x6f,
     0x70,0x71,0x72,0x73, 0x74,0x75,0x76,0x77,
