@@ -1,3 +1,8 @@
+2005-02-08  Derek Price  <derek@ximbiot.com>
+
+	* fncase.c (OSX_filename_classes): Mac OSX doesn't need \ mapped to /.
+	* system.h (FOLD_FN_CASE): Clarify comment.
+
 2005-01-31  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am: Update copyright notices.
